# FirstProject

./: CMakeLists.txt  LICENSE  README.en.md  README.md
lvgl/: lv_conf.h
main/src/: bsp_Screen.c  bsp_Screen.h  main.c
